--- a/src/app.html
+++ b/src/app.html
@@ -3,16 +3,18 @@
   <require from="./styles.css"></require>
   <require from="./contact-list"></require>
 
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">
-        Contacts
+        <i class="fa fa-user"></i>
+        <span>Contacts</span>
       </a>
     </div>
   </nav>
 
+  <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
+
   <div class="container">
-    <loading-indicator loading.bind="router.isNavigating || api.isRequesting"></loading-indicator>
     <div class="row">
       <contact-list class="col-md-4"></contact-list>
       <router-view class="col-md-8"></router-view>
