--- a/src/app.html
+++ b/src/app.html
@@ -16,8 +16,7 @@
 
   <div class="container">
     <div class="row">
-      <contact-list class="col-md-4"></contact-list>
-      <router-view class="col-md-8"></router-view>
+      <router-view></router-view>
     </div>
   </div>
 </template>
