--- a/src/resources/elements/list-view.html
+++ b/src/resources/elements/list-view.html
@@ -15,13 +15,14 @@
                     http://stackoverflow.com/questions/32405372/binding-to-a-custom-element-in-a-template-part-in-aurelia
                     http://plnkr.co/edit/PkXysZ?p=preview
                 -->
+                <!--<template replaceable part="group-header-template">
+                    <p>group header</p>
+                </template>-->
+
+
 
                 <template replaceable part="item-template">
                     <p>item</p>
-                </template>
-
-                <template replaceable part="group-header-template">
-                    <p>group header</p>
                 </template>
 
             </li>
