--- a/src/test-2.html
+++ b/src/test-2.html
@@ -9,7 +9,7 @@
 
         <ul class="animated-collection au-stagger">
             <li repeat.for="item of items" class="au-animate">
-                <span click.trigger="remove(item)">${item}</span>
+                <div click.trigger="remove(item)">${item}</div>
             </li>
         </ul>
 
