--- a/src/resources/elements/list-view.html
+++ b/src/resources/elements/list-view.html
@@ -25,7 +25,7 @@
                         <p>item</p>
                     </template>
                 </div>
-                <div class="selection-checkmark">&#xE73A;</div>
+                <div class="selection-checkmark"></div>
             </li>
         </ul>
     </div>
