--- a/src/test-4.html
+++ b/src/test-4.html
@@ -15,12 +15,25 @@
 
     <app-bar>
         <div slot="main-items">
-            <button>OK</button>
-            <button>GO</button>
+            <button>
+                <span class="command-icon" tabindex="-1"></span>
+                <label tabindex="-1">Add</label>
+            </button>
+
+            <button>
+                <span class="command-icon" tabindex="-1"></span>
+                <label tabindex="-1">Hello</label>
+            </button>
+
+            <button>
+                <span class="command-icon" tabindex="-1"></span>
+                <label tabindex="-1">OK</label>
+            </button>
+
         </div>
         <div slot="second-items">
-            <button>OK 1</button>
-            <button>GO 2</button>
+            <button><span class="win-label">OK 1</span></button>
+            <button><span class="win-label">OK 2</span></button>
         </div>
     </app-bar>
 
