--- a/src/test-4.html
+++ b/src/test-4.html
@@ -32,7 +32,7 @@
 
         </div>
         <div slot="second-items">
-            <button><span class="win-label">OK 1</span></button>
+            <button click.trigger="click()"><span class="win-label">OK 1</span></button>
             <button><span class="win-label">OK 2</span></button>
         </div>
     </app-bar>
